<resources>
    <string name="app_name">Zgirls Tool</string>
    <string name="tb_types">Types</string>
    <string name="tb_reset">Reset</string>
    <string name="tb_building">Building</string>
    <string name="tb_deads">Deads</string>
    <string name="tb_enabler">Enabler</string>
    <string name="tb_events">Events</string>
    <string name="tb_mecha">" Mecha"</string>
    <string name="tb_other">Other</string>
    <string name="tb_rss">RSS</string>
    <string name="tb_rush_up">Rush Up</string>
    <string name="tb_tech">Tech</string>
    <string name="tb_troops">Troops</string>
    <string name="tb_tools">Tools</string>
    <string name="tb_tb">" Teach Building"</string>
    <string name="tb_troop">" Troops "</string>
    <string name="tb_exp">" Enabler EXP"</string>
    <string name="tb_event">" Event Store"</string>
    <string name="tb_exp_lvl">" EXP To Lvl"</string>
    <string name="tb_idea">"If you have any ideas / problems / bug report , pls feel free to tell Voc "</string>
    <string name="public_cal_btn">Calculate !</string>
    <string name="public_cal">Calculate</string>
    <string name="public_troop">Troop List</string>
    <string name="public_save_btn">Save</string>
    <string name="event_tickets">Tickets :</string>
    <string name="event_rss">RSS</string>
    <string name="event_enabler">Enabler</string>
    <string name="event_transform">Transform</string>
    <string name="event_arena">Arena</string>
    <string name="exp_enabler_lvl">Enabler\'s Level</string>
    <string name="exp_aim">Aim Level</string>
    <string name="exp_buff_day">EXP Buff Day ?</string>
    <string name="public_you_need">You Need :</string>
    <string name="tb_mechas">Mecha</string>
    <string name="tut_1">Hi ! Thanks for installing Z-Girls Tool !</string>
    <string name="tut_2">I\'m the guider who will teach you how to use this app 😃</string>
    <string name="tut_3">Oh, do you see many items in the list?</string>
    <string name="tut_4">Actually , they are some tips which can help newbies !</string>
    <string name="tut_5">Stupid Voc have already help you to classify all of them to Ten types 🤔</string>
    <string name="tut_6">Next , please press the \'TYPES\' Button</string>
    <string name="tut_7">There have 10 button , they can help you find tips which you want quickily 😄</string>
    <string name="tut_8">You may now try to press them !</string>
    <string name="tut_9">Oh , I forgot to tell you that , you can press the item in the list , then you can read the full tips</string>
    <string name="tut_10">Then , did you see there have two yellow button</string>
    <string name="tut_11">The right button is use to change theme ! Press it and choose what theme you want , if there haven\'t your favourite theme , you may punch stupid Voc\'s head (EoE)</string>
    <string name="tut_12">Next , you may press the left button</string>
    <string name="tut_13">You will see a list of calcalator , press them to use ! Enjoy</string>
    <string name="mecha_now_lvl">Mecha\'s Level</string>
    <string name="mecha_aim">Aim Level</string>
    <string name="tb_lvl">Your TB Level</string>
    <string name="tb_aim">"Aim Level : "</string>
    <string name="tb_time_buff">Time Buff</string>
    <string name="tb_rss_buff">RSS Buff</string>
    <string name="troop_total">Total : </string>
    <string name="expc_p1">You have </string>
    <string name="expc_2">EXP in your bag</string>
    <string name="enabler_exp">Enabler\'s EXP</string>
    <string name="expc_basic">You have 0 EXP in your bag</string>
    <string name="proj_1">	Project Zero · Annihilate	</string>
    <string name="proj_2">	Project One · Freedom	</string>
    <string name="proj_3">	Project One · Barrier	</string>
    <string name="proj_4">	Project Zero · Support	</string>
    <string name="proj_5">	Project Zero · Hunt	</string>
    <string name="proj_6">	Project One · Ambition	</string>
    <string name="proj_7">	Project One · Cleanse	</string>
    <string name="proj_8">	Project One · Fortress	</string>
    <string name="proj_9">	Project Zero · Adjudicate	</string>
    <string name="proj_10">	Project One · Unyielding	</string>
    <string name="arm_1">	Shooter Freshman	</string>
    <string name="arm_2">	Assaulter Freshman	</string>
    <string name="arm_3">	Shooter Sophomore	</string>
    <string name="arm_4">	Assaulter Sophomore	</string>
    <string name="arm_5">	Fire Support Sophomore	</string>
    <string name="arm_6">	Fire Support Junior	</string>
    <string name="arm_7">	Kyudo Senior	</string>
    <string name="arm_8">	Holy Sister	</string>
    <string name="arm_9">	Shinto Miko	</string>
    <string name="arm_10">	Dead Hunter	</string>
    <string name="mili_1">	Sports Freshman	</string>
    <string name="mili_2">	Execution Freshman	</string>
    <string name="mili_3">	Sports Sophomore	</string>
    <string name="mili_4">	Execution Sophomore	</string>
    <string name="mili_5">	Sophomore Attacker	</string>
    <string name="mili_6">	Junior Attacker	</string>
    <string name="mili_7">	Budo Senior	</string>
    <string name="mili_8">	Chunibyo Striker	</string>
    <string name="mili_9">	Karate Striker	</string>
    <string name="mili_10">	Strategy Master	</string>
    <string name="mobile_1">	Extreme Sport Team	</string>
    <string name="mobile_2">	Defensive Aids Team	</string>
    <string name="mobile_3">	High-speed Guard Team	</string>
    <string name="mobile_4">	Heavy Ranged Team	</string>
    <string name="mobile_5">	School Armoured Team	</string>
    <string name="mobile_6">	Combat Comm. Team	</string>
    <string name="mobile_7">	Heavy Armed Team	</string>
    <string name="mobile_8">	Combat Assaulter Team	</string>
    <string name="mobile_9">	Ranged Aids Team	</string>
    <string name="mobile_10">	Dead Reaper Team	</string>
    <string name="infect_1">	Tainted Girl	</string>
    <string name="infect_2">	Viral Girl	</string>
    <string name="infect_3">	Destructive Girl	</string>
    <string name="infect_4">	Ransformed Girl	</string>
    <string name="infect_5">	Melanized Girl	</string>
    <string name="infect_6">	Combat Girl	</string>
    <string name="infect_7">	Fevered Girl	</string>
    <string name="infect_8">	Evolved Girl	</string>
    <string name="infect_9">	Dark Killer	</string>
    <string name="infect_10">	Dark Valkyria	</string>
    <string name="project">Project Origin Troops</string>
    <string name="armed">Shooter</string>
    <string name="mili">Attacker</string>
    <string name="mobile">Mobile Team</string>
    <string name="infecion">Dead Troop</string>
    <string name="buff">Buff</string>
    <string name="buff_1">Train Train Acceleration</string>
    <string name="buff_2">Troop Load</string>
    <string name="buff_3">Troop Train Cost</string>
    <string name="alloy_mine1"> [BUILD] Alloy Mine lvl 1</string>
    <string name="alloy_mine2"> [BUILD] Alloy Mine lvl 2</string>
    <string name="alloy_mine3"> [BUILD] Alloy Mine lvl 3</string>
    <string name="alloy_mine4"> [BUILD] Alloy Mine lvl 4</string>
    <string name="alloy_mine5"> [BUILD] Alloy Mine lvl 5</string>
    <string name="alloy_mine6"> [BUILD] Alloy Mine lvl 6</string>
    <string name="alloy_mine7"> [BUILD] Alloy Mine lvl 7</string>
    <string name="alloy_mine8"> [BUILD] Alloy Mine lvl 8</string>
    <string name="alloy_mine9"> [BUILD] Alloy Mine lvl 9</string>
    <string name="alloy_mine10"> [BUILD] Alloy Mine lvl 10</string>
    <string name="alloy_mine11"> [BUILD] Alloy Mine lvl 11</string>
    <string name="alloy_mine12"> [BUILD] Alloy Mine lvl 12</string>
    <string name="alloy_mine13"> [BUILD] Alloy Mine lvl 13</string>
    <string name="alloy_mine14"> [BUILD] Alloy Mine lvl 14</string>
    <string name="alloy_mine15"> [BUILD] Alloy Mine lvl 15</string>
    <string name="alloy_mine16"> [BUILD] Alloy Mine lvl 16</string>
    <string name="alloy_mine17"> [BUILD] Alloy Mine lvl 17</string>
    <string name="alloy_mine18"> [BUILD] Alloy Mine lvl 18</string>
    <string name="alloy_mine19"> [BUILD] Alloy Mine lvl 19</string>
    <string name="alloy_mine20"> [BUILD] Alloy Mine lvl 20</string>
    <string name="alloy_mine21"> [BUILD] Alloy Mine lvl 21</string>
    <string name="alloy_mine22"> [BUILD] Alloy Mine lvl 22</string>
    <string name="alloy_mine23"> [BUILD] Alloy Mine lvl 23</string>
    <string name="alloy_mine24"> [BUILD] Alloy Mine lvl 24</string>
    <string name="alloy_mine25"> [BUILD] Alloy Mine lvl 25</string>
    <string name="alloy_mine26"> [BUILD] Alloy Mine lvl 26</string>
    <string name="alloy_mine27"> [BUILD] Alloy Mine lvl 27</string>
    <string name="alloy_mine28"> [BUILD] Alloy Mine lvl 28</string>
    <string name="alloy_mine29"> [BUILD] Alloy Mine lvl 29</string>
    <string name="alloy_mine30"> [BUILD] Alloy Mine lvl 30</string>
    <string name="alloy_mine31"> [BUILD] Alloy Mine Glory 1</string>
    <string name="alloy_mine32"> [BUILD] Alloy Mine Glory 2</string>
    <string name="alloy_mine33"> [BUILD] Alloy Mine Glory 3</string>
    <string name="alloy_mine34"> [BUILD] Alloy Mine Glory 4</string>
    <string name="alloy_mine35"> [BUILD] Alloy Mine Glory 5</string>
    <string name="armed_forces1"> [BUILD] Armed Forces lvl 1</string>
    <string name="armed_forces2"> [BUILD] Armed Forces lvl 2</string>
    <string name="armed_forces3"> [BUILD] Armed Forces lvl 3</string>
    <string name="armed_forces4"> [BUILD] Armed Forces lvl 4</string>
    <string name="armed_forces5"> [BUILD] Armed Forces lvl 5</string>
    <string name="armed_forces6"> [BUILD] Armed Forces lvl 6</string>
    <string name="armed_forces7"> [BUILD] Armed Forces lvl 7</string>
    <string name="armed_forces8"> [BUILD] Armed Forces lvl 8</string>
    <string name="armed_forces9"> [BUILD] Armed Forces lvl 9</string>
    <string name="armed_forces10"> [BUILD] Armed Forces lvl 10</string>
    <string name="armed_forces11"> [BUILD] Armed Forces lvl 11</string>
    <string name="armed_forces12"> [BUILD] Armed Forces lvl 12</string>
    <string name="armed_forces13"> [BUILD] Armed Forces lvl 13</string>
    <string name="armed_forces14"> [BUILD] Armed Forces lvl 14</string>
    <string name="armed_forces15"> [BUILD] Armed Forces lvl 15</string>
    <string name="armed_forces16"> [BUILD] Armed Forces lvl 16</string>
    <string name="armed_forces17"> [BUILD] Armed Forces lvl 17</string>
    <string name="armed_forces18"> [BUILD] Armed Forces lvl 18</string>
    <string name="armed_forces19"> [BUILD] Armed Forces lvl 19</string>
    <string name="armed_forces20"> [BUILD] Armed Forces lvl 20</string>
    <string name="armed_forces21"> [BUILD] Armed Forces lvl 21</string>
    <string name="armed_forces22"> [BUILD] Armed Forces lvl 22</string>
    <string name="armed_forces23"> [BUILD] Armed Forces lvl 23</string>
    <string name="armed_forces24"> [BUILD] Armed Forces lvl 24</string>
    <string name="armed_forces25"> [BUILD] Armed Forces lvl 25</string>
    <string name="armed_forces26"> [BUILD] Armed Forces lvl 26</string>
    <string name="armed_forces27"> [BUILD] Armed Forces lvl 27</string>
    <string name="armed_forces28"> [BUILD] Armed Forces lvl 28</string>
    <string name="armed_forces29"> [BUILD] Armed Forces lvl 29</string>
    <string name="armed_forces30"> [BUILD] Armed Forces lvl 30</string>
    <string name="armed_forces31"> [BUILD] Armed Forces Glory 1</string>
    <string name="armed_forces32"> [BUILD] Armed Forces Glory 2</string>
    <string name="armed_forces33"> [BUILD] Armed Forces Glory 3</string>
    <string name="armed_forces34"> [BUILD] Armed Forces Glory 4</string>
    <string name="armed_forces35"> [BUILD] Armed Forces Glory 5</string>
    <string name="armory1"> [BUILD] Armory lvl 1</string>
    <string name="tech_cal">" Technology"</string>
    <string name="data_reader">" Ingame Data Reader"</string>
    <string name="bg_reader">" Background selection"</string>
    <string name="tb_cal">Calculator</string>
    <string name="tb_float">" Floating button"</string>
</resources>