<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="0"
    android:background="@color/background_dark"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView59"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tb_cal"
        android:textAlignment="textStart"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="vertical"
        android:theme="@style/ThemeOverlay.AppCompat.Dark">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/a"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:gravity="center"
                    android:paddingLeft="10dp"
                    android:text="@string/tb_tb"
                    android:textAlignment="viewStart"
                    android:textColor="@android:color/background_light"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/b"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:gravity="center"
                    android:paddingLeft="10dp"
                    android:text="@string/tb_troop"
                    android:textAlignment="viewStart"
                    android:textColor="@android:color/background_light"
                    android:textSize="24sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/c"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:gravity="center"
                    android:paddingLeft="10dp"
                    android:text="@string/tb_exp"
                    android:textAlignment="viewStart"
                    android:textColor="@android:color/background_light"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/d"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:gravity="center"
                    android:paddingLeft="10dp"
                    android:text="@string/tb_mecha"
                    android:textAlignment="viewStart"
                    android:textColor="@android:color/background_light"
                    android:textSize="24sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/e"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:gravity="center"
                    android:paddingLeft="10dp"
                    android:text="@string/tb_event"
                    android:textAlignment="viewStart"
                    android:textColor="@color/colorWhite"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/f"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:gravity="center"
                    android:paddingLeft="10dp"
                    android:text="@string/tb_exp_lvl"
                    android:textAlignment="viewStart"
                    android:textColor="@android:color/background_light"
                    android:textSize="24sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/g"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:gravity="center"
                    android:paddingLeft="10dp"
                    android:text="@string/tech_cal"
                    android:textAlignment="viewStart"
                    android:textColor="@android:color/background_light"
                    android:textSize="24sp"
                    android:visibility="visible" />
            </TableRow>
        </TableLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/textView60"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tb_tools"
        android:textAlignment="textStart"
        android:textColor="@color/background_leek"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/h"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:text="@string/bg_reader"
                android:textAlignment="viewStart"
                android:textColor="@android:color/background_light"
                android:textSize="24sp"
                android:visibility="visible" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/i"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:onClick="notifyButton"
                android:paddingLeft="10dp"
                android:text="@string/tb_float"
                android:textAlignment="viewStart"
                android:textColor="@android:color/background_light"
                android:textSize="24sp"
                android:visibility="visible" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/j"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:onClick="notifyButton"
                android:paddingLeft="10dp"
                android:text="@string/data_reader"
                android:textAlignment="viewStart"
                android:textColor="@android:color/background_light"
                android:textSize="24sp"
                android:visibility="visible" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </TableLayout>

    <TextView
        android:id="@+id/textView61"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_weight="0" />

</LinearLayout>