<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_dark"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="175dp"
        android:gravity="bottom"
        android:orientation="vertical"
        android:theme="@style/ThemeOverlay.AppCompat.Dark">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="94dp"
            android:layout_height="100dp"
            app:srcCompat="@drawable/app_icon_round" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/colorAccent"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="voc.app.programmer@gmail.com"
            android:textColor="@color/background_pink"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/dc_server"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Discord Server [OFFICAL] : https://discord.gg/mB8AbbG"
            android:textColor="@color/colorPink" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="36dp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView15"
                        android:layout_width="16dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0" />

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="match_parent"
                        android:layout_height="36dp"
                        android:text="@string/tb_cal"
                        android:textAlignment="textStart"
                        android:textColor="@android:color/background_light"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_weight="0"
                    android:background="?android:listChoiceBackgroundIndicator"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/a"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_weight="0"
                        android:background="@android:color/transparent"
                        android:drawableStart="@drawable/ic_keyboard_black_24dp"
                        android:gravity="center"
                        android:text="@string/tb_tb"
                        android:textAlignment="viewStart"
                        android:textColor="@android:color/background_light"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/b"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_weight="0"
                        android:background="@android:color/transparent"
                        android:drawableLeft="@drawable/ic_keyboard_black_24dp"
                        android:gravity="center"
                        android:text="@string/tb_troop"
                        android:textAlignment="viewStart"
                        android:textColor="@android:color/background_light"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/c"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_weight="0"
                        android:background="@android:color/transparent"
                        android:drawableLeft="@drawable/ic_keyboard_black_24dp"
                        android:gravity="center"
                        android:text="@string/tb_exp"
                        android:textAlignment="viewStart"
                        android:textColor="@android:color/background_light"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/d"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_weight="0"
                        android:background="@android:color/transparent"
                        android:drawableLeft="@drawable/ic_keyboard_black_24dp"
                        android:gravity="center"
                        android:text="@string/tb_mecha"
                        android:textAlignment="viewStart"
                        android:textColor="@android:color/background_light"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/e"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_weight="0"
                        android:background="@android:color/transparent"
                        android:drawableLeft="@drawable/ic_keyboard_black_24dp"
                        android:gravity="center"
                        android:text="@string/tb_event"
                        android:textAlignment="viewStart"
                        android:textColor="@color/colorWhite"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/f"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_weight="0"
                        android:background="@android:color/transparent"
                        android:drawableLeft="@drawable/ic_keyboard_black_24dp"
                        android:gravity="center"
                        android:text="@string/tb_exp_lvl"
                        android:textAlignment="viewStart"
                        android:textColor="@android:color/background_light"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/g"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_weight="0"
                        android:background="@android:color/transparent"
                        android:drawableLeft="@drawable/ic_keyboard_black_24dp"
                        android:gravity="center"
                        android:text="@string/tech_cal"
                        android:textAlignment="viewStart"
                        android:textColor="@android:color/background_light"
                        android:textSize="24sp"
                        android:visibility="visible" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView14"
                        android:layout_width="16dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="match_parent"
                        android:layout_height="36dp"
                        android:text="@string/tb_tools"
                        android:textAlignment="textStart"
                        android:textColor="@android:color/background_light"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_weight="0"
                    android:background="?android:listChoiceBackgroundIndicator"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/h"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_weight="0"
                        android:background="@android:color/transparent"
                        android:drawableLeft="@drawable/ic_keyboard_black_24dp"
                        android:gravity="center"
                        android:text="@string/bg_reader"
                        android:textAlignment="viewStart"
                        android:textColor="@android:color/background_light"
                        android:textSize="24sp"
                        android:visibility="visible" />

                    <TextView
                        android:id="@+id/i"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_weight="0"
                        android:background="@android:color/transparent"
                        android:drawableLeft="@drawable/ic_keyboard_black_24dp"
                        android:gravity="center"
                        android:onClick="notifyButton"
                        android:text="@string/data_reader"
                        android:textAlignment="viewStart"
                        android:textColor="@android:color/background_light"
                        android:textSize="24sp"
                        android:visibility="visible" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_weight="0" />

                </LinearLayout>

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:text="@string/tb_idea"
                    android:textAlignment="center"
                    android:textColor="@android:color/background_light"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="wrap_content"
                    android:layout_height="250dp"
                    android:visibility="gone" />

            </LinearLayout>
        </ScrollView>


    </LinearLayout>


</LinearLayout>